--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -8,6 +8,7 @@ $(function () {
   $(".js-next").on("click", function(event) {
     event.preventDefault()
     var nextId = parseInt($(".js-next").attr("data-id")) + 1;
+    debugger
     $.get("/posts/" + nextId + ".json", function(data) {
       $(".authorName").text(data["author"]["name"]);
       $(".postTitle").text(data["title"]);
